# AxOS

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml  setup.sh
.cargo/: config  config.toml
.githooks/: pre-commit
.github/: pre-commit
.github/workflows/: lints-and-tests.yml  lints.yml
src/: allocator.rs  dbg_print.rs  io.rs  io_port.rs  lib.rs  main.rs  serial_port.rs  vga.rs  vga_device.rs
src/allocation/: allocator.rs  mod.rs
src/interrupts/: gdt.rs  idt.rs  mod.rs  pic.rs
src/keyboard/: mod.rs  scan_set_1.rs
src/mem/: frame_allocator.rs  mod.rs  page_table.rs
tests/: README.md  stack_overflow.rs  trivial.rs
