[package]
name = "ax_os"
version = "0.1.0"
authors = ["Axel Lindeberg <axel.ew.lindeberg@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.5"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = [
  "-serial", "stdio",
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-display", "none",
]
test-success-exit-code = 33

[package.metadata.bootloader]
physical-memory-offset = "0x20000000000"
